# Convolution2D

./: README.md  main.py
c++/: CMakeLists.txt  a.out  conv2d.cpp  thread_conv2d.cpp
python/: conv2d.py  main.py  requirements.txt
